resources7/f5-ltm-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: f5-ltm-v3
  namespace: default 
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
  selector:
    kubevirt.io/domain: f5-ltm-v3
    vm.kubevirt.io/name: f5-ltm-v3
  type: LoadBalancer
  sessionAffinity: ClientIP
  externalTrafficPolicy: Cluster
status:
  loadBalancer: {}
