resources7/fortigate-cloudinit-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: fortigate-tiny-cloudinit-service
  namespace: default
  annotations:
    openshift.io/host.generated: 'true'  
spec:  
  to:
    kind: Service
    name: fortigate-tiny-cloudinit-service
    weight: 100
  port:
    targetPort: 80
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - type: Admitted
          status: 'True'
